--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,18 +19,18 @@
     "target": "es2022",
     "module": "es2020",
     "lib": [
-      "es2018",
+      "es2018", 
       "dom"
     ],
     "useDefineForClassFields": false,
     "strictPropertyInitialization": false,
     "skipLibCheck": true
+
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": false
+    "strictTemplates": true
   }
 }
-
